add desk and add doc ;

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,13 @@
     <meta charset="utf-8">
     <meta name="author" content="Softnio">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
+    <meta name="description" content="TRVL Token" />
+    <meta property="og:type" content="welcome to the new way to travel">
+    <meta property="og:url" content="https://trvltoken.io">
+    <meta property="og:site_name" content="TRVL TOKEN">
+    <meta property="og:title" content="TRVL Token">
+    <meta property="og:description" content="welcome to the new way to travel">
+    <meta property="og:image" content="/img/favicon.png" />
     <!-- Fav Icon  -->
     <link rel="shortcut icon" href="/img/favicon.png">
     <!-- Site Title  -->
