--- a/templates/section/header.html
+++ b/templates/section/header.html
@@ -55,9 +55,8 @@
                                     </div> -->
                                     <div class="cpn-action">
                                         <ul class="cpn-links animated" data-animate="fadeInUp" data-delay="1.45">
-                                            <li><a class="link link-primary" href="#"><em class="link-icon icon-circle ti ti-files"></em> <span>White Paper</span></a></li>
-                                            <li><a class="link link-primary" href="#"><em class="link-icon icon-circle ti ti-file"></em> <span>One Pager</span></a></li>
-                                            <li><a class="link link-primary video-play" href="https://www.youtube.com/watch?v=SSo_EIwHSd4"><em class="link-icon icon-circle ti ti-control-play"></em> <span>How it works</span></a></li>
+                                            <li><a class="link link-primary" href="/doc/LITEPAPER TRAVEL TOKEN.pdf"><em class="link-icon icon-circle ti ti-files"></em> <span>Lite Paper</span></a></li>
+                                            <li><a class="link link-primary" href="/doc/TRVL Token Business Plan.pdf"><em class="link-icon icon-circle ti ti-file"></em> <span>Business Plan</span></a></li>
                                         </ul>
                                     </div>
                                 </div>
