--- a/templates/section/header.html
+++ b/templates/section/header.html
@@ -6,8 +6,8 @@
                 <!-- Logo @s -->
                 <div class="header-logo logo animated" data-animate="fadeInDown" data-delay=".65">
                     <a href="./" class="logo-link">
-                        <img class="logo-dark" src="/img/logo-full-orange.png" srcset="/images/logo2x.png 2x" alt="logo">
-                        <img class="logo-light" src="/img/logo-full-orange.png" srcset="/images/logo2x.png 2x" alt="logo">
+                        <img class="logo-dark" src="/img/logo-full-orange.png" srcset="/img/logo-full-orange.png" alt="logo">
+                        <img class="logo-light" src="/img/logo-full-orange.png" srcset="/img/logo-full-orange.png" alt="logo">
                     </a>
                 </div>
                 <!-- Menu Toogle @s -->
