--- a/templates/section/footer.html
+++ b/templates/section/footer.html
@@ -54,7 +54,7 @@
                                 <li><a href="#"><em class="social-icon fab fa-medium-m"></em></a></li>
                             </ul>
                             <a href="./" class="footer-logo">
-                                <img src="/img/logo-full-dark.png" srcset="/images/logo2x.png 2x" alt="logo"
+                                <img src="/img/logo-full-dark.png" srcset="/img/logo-full-dark.png" alt="logo"
                                     width="250px">
                             </a>
                             <div class="pdt-m">
