--- a/templates/section/contact.html
+++ b/templates/section/contact.html
@@ -30,7 +30,7 @@
                             <li class="animated" data-animate="fadeInUp" data-delay=".6">
                                 <em class="contact-icon contact-icon-s2 fas fa-paper-plane"></em>
                                 <div class="contact-text">
-                                    <span>Join us on Telegram</span>
+                                    <a href="https://t.me/trvltokenio" target="_blank">Join us on Telegram</a>
                                 </div>
                             </li>
                         </ul>
