--- a/templates/section/footer.html
+++ b/templates/section/footer.html
@@ -1,44 +1,6 @@
 <footer class="nk-footer">
-    <section class="section py-0">
-        <div class="container">
-            <!-- Block @s -->
-            <div class="nk-block overflow-hidden">
-                <div class="bg-grad-alt round subscribe-wrap tc-light animated" data-animate="fadeInUp"
-                    data-delay=".2">
-                    <div
-                        class="row text-center text-md-left justify-content-center align-items-center gutter-vr-25px">
-                        <div class="col-lg-6">
-                            <div class="wide-auto-sm">
-                                <h4 class="title-sm">Don't miss out, Stay updated</h4>
-                                <p>Sign up for updates and market news. Subscribe to our newsletter and receive
-                                    update about ICOs and crypto tips</p>
-                            </div>
-                        </div><!-- .col -->
-                        <div class="col-lg-6">
-                            <div class="gap-3x d-none d-lg-block"></div>
-                            <form action="form/subscribe.php" class="nk-form-submit" method="post">
-                                <div
-                                    class="field-inline field-inline-s2 field-inline-s2-sm bg-white shadow-soft">
-                                    <div class="field-wrap">
-                                        <input class="input-solid input-solid-md required email" type="text"
-                                            name="contact-email" placeholder="Enter your email">
-                                        <input type="text" class="d-none" name="form-anti-honeypot" value="">
-                                    </div>
-                                    <div class="submit-wrap">
-                                        <button class="btn btn-md btn-secondary">Subscribe</button>
-                                    </div>
-                                </div>
-                                <div class="form-results"></div>
-                            </form>
-                        </div><!-- .col -->
-                    </div>
-                </div>
-            </div>
-            <!-- .block @e -->
-        </div>
-        <div class="nk-ovm ovm-top ovm-h-50 bg-white bdb ov-h"></div><!-- .nk-ovm -->
-    </section>
-    <div class="section section-footer section-m bg-transparent">
+    
+    <div class="section section-footer section-m bg-dark">
         <div class="container">
             <!-- Block @s -->
             <div class="nk-block block-footer">
@@ -46,19 +8,17 @@
                     <div class="col">
                         <div class="wgs wgs-text text-center mb-3">
                             <ul class="social pdb-l justify-content-center">
-                                <li><a href="#"><em class="social-icon fab fa-facebook-f"></em></a></li>
-                                <li><a href="#"><em class="social-icon fab fa-twitter"></em></a></li>
-                                <li><a href="#"><em class="social-icon fab fa-youtube"></em></a></li>
-                                <li><a href="#"><em class="social-icon fab fa-github"></em></a></li>
-                                <li><a href="#"><em class="social-icon fab fa-bitcoin"></em></a></li>
-                                <li><a href="#"><em class="social-icon fab fa-medium-m"></em></a></li>
+                                <li><a href="https://fb.me/trvltoken.io"><em class="social-icon fab fa-facebook-f"></em></a></li>
+                                <li><a href="https://twitter.com/Trvltokenio"><em class="social-icon fab fa-twitter"></em></a></li>
+                                <li><a href="https://www.instagram.com/trvltoken.io/"><em class="social-icon fab fa-instagram"></em></a></li>
+                                <li><a href="https://t.me/trvltokenio"><em class="social-icon fab fa-telegram"></em></a></li>
                             </ul>
                             <a href="./" class="footer-logo">
-                                <img src="/img/logo-full-dark.png" srcset="/img/logo-full-dark.png" alt="logo"
+                                <img src="/img/logo-full-orange.png" srcset="/img/logo-full-orange.png" alt="logo"
                                     width="250px">
                             </a>
                             <div class="pdt-m">
-                                <p>Copyright &copy; 2022, TRVL Token <br> All trademarks and copyrights belong
+                                <p style="color:#E4E5E5 !important;">Copyright &copy; 2022, TRVL Token <br> All trademarks and copyrights belong
                                     to their respective owners.</p>
                             </div>
                         </div>
