--- a/templates/section/header.html
+++ b/templates/section/header.html
@@ -23,12 +23,9 @@
                     <nav class="header-menu" id="header-menu">
                         <ul class="menu animated" data-animate="fadeInDown" data-delay=".75">
                             <li class="menu-item"><a class="menu-link nav-link" href="#about">About</a></li>
-                            <li class="menu-item"><a class="menu-link nav-link" href="#why">Why</a></li>
-                            <li class="menu-item"><a class="menu-link nav-link" href="#benifits">Benifits</a></li>
+                            <li class="menu-item"><a class="menu-link nav-link" href="#benifits">Marketing</a></li>
                             <li class="menu-item"><a class="menu-link nav-link" href="#token">Token Sale</a></li>
                             <li class="menu-item"><a class="menu-link nav-link" href="#roadmap">Roadmap</a></li>
-                            <li class="menu-item"><a class="menu-link nav-link" href="#team">Team</a></li>
-                            <li class="menu-item"><a class="menu-link nav-link" href="#faqs">Faqs</a></li>
                             <li class="menu-item"><a class="menu-link nav-link" href="#contact">Contact</a></li>
                         </ul>
                         
@@ -57,6 +54,7 @@
                                         <ul class="cpn-links animated" data-animate="fadeInUp" data-delay="1.45">
                                             <li><a class="link link-primary" href="/doc/LITEPAPER TRAVEL TOKEN.pdf"><em class="link-icon icon-circle ti ti-files"></em> <span>Lite Paper</span></a></li>
                                             <li><a class="link link-primary" href="/doc/TRVL Token Business Plan.pdf"><em class="link-icon icon-circle ti ti-file"></em> <span>Business Plan</span></a></li>
+                                        <li><a class="link link-primary" href="https://bscscan.com/token/0xa13d5d272c0b7ad06ed00aaecf21875febe1695b"><em class="link-icon icon-circle ti ti-file"></em> <span>Smart Contract</span></a></li>
                                         </ul>
                                     </div>
                                 </div>
