--- a/templates/section/token.html
+++ b/templates/section/token.html
@@ -6,66 +6,59 @@
                 Token</h6>
             <h2 class="title animated" data-animate="fadeInUp" data-delay=".2">Token Sale</h2>
             <div class="wide-sm">
-                <p class="animated" data-animate="fadeInUp" data-delay=".3">The tokens will be available for
-                    transfer thar is rorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <p class="animated" data-animate="fadeInUp" data-delay=".3">You can sale buy TRVL Token at our Private Sale Event.</p>
             </div>
         </div>
         <div class="nk-block nk-block-token">
             <div class="row gutter-vr-30px">
-                <div class="col-lg-7">
+                <div class="col-lg-12">
                     <div class="row">
                         <div class="col-sm-4">
                             <div class="token-stage text-center animated" data-animate="fadeInUp" data-delay=".4">
-                                <div class="token-stage-title token-stage-pre">Pre Sale</div>
+                                <div class="token-stage-title token-stage-pre">Private Sale Event I</div>
                                 <div class="token-stage-date">
-                                    <h6>3 July 2022</h6>
+                                    <h6>15 June 2022</h6>
                                     <span>10 Days</span>
                                 </div>
                                 <div class="token-stage-info">
-                                    <span class="token-stage-bonus">30% Bonus</span>
-                                    <span class="token-stage-cap">Soft Cap</span>
-                                    <span class="token-stage-amount">$2M</span>
+                                    <span class="token-stage-bonus">20% Bonus</span>
                                 </div>
                             </div>
                         </div><!-- .col -->
                         <div class="col-sm-4">
                             <div class="token-stage text-center animated" data-animate="fadeInUp" data-delay=".5">
-                                <div class="token-stage-title token-stage-one">Sale Stage 1</div>
+                                <div class="token-stage-title token-stage-one">Private Sale Event II</div>
                                 <div class="token-stage-date">
-                                    <h6>15 August 2022</h6>
-                                    <span>15 Days</span>
+                                    <h6>26 June 2022</h6>
+                                    <span>5 Days</span>
                                 </div>
                                 <div class="token-stage-info">
-                                    <span class="token-stage-bonus">30% Bonus</span>
-                                    <span class="token-stage-cap">Soft Cap</span>
-                                    <span class="token-stage-amount">$2M</span>
+                                    <span class="token-stage-bonus">20% Bonus</span>
                                 </div>
                             </div>
                         </div><!-- .col -->
                         <div class="col-sm-4">
                             <div class="token-stage text-center animated" data-animate="fadeInUp" data-delay=".6">
-                                <div class="token-stage-title">Sale Stage 2t</div>
+                                <div class="token-stage-title">Private Sale Event III</div>
                                 <div class="token-stage-date">
-                                    <h6>28 October 2022</h6>
-                                    <span>10 Days</span>
+                                    <h6>1 July 2022</h6>
+                                    <span>5 Days</span>
                                 </div>
                                 <div class="token-stage-info">
                                     <span class="token-stage-bonus">10% Bonus</span>
-                                    <span class="token-stage-cap">Hard Cap</span>
-                                    <span class="token-stage-amount">$3M</span>
                                 </div>
                             </div>
                         </div><!-- .col -->
                     </div><!-- row -->
-                    <div class="token-action-box text-center animated" data-animate="fadeInUp" data-delay=".7">
+                    <!-- <div class="token-action-box text-center animated" data-animate="fadeInUp" data-delay=".7">
                         <div class="token-action-title">Join Our <br> Pre-Sale List</div>
                         <div class="token-action-date"><strong>Pre-Sale Start at</strong> 03 July 2022</div>
                         <div class="token-action-btn">
                             <a href="#" class="btn btn-lg btn-grad">Signup &amp; Join</a>
                         </div>
-                    </div>
+                    </div> -->
                 </div><!-- .col -->
-                <div class="col-lg-5">
+                <!-- <div class="col-lg-5">
                     <table class="table table-token table-token-s1 animated" data-animate="fadeInUp" data-delay=".8">
                         <tbody>
                             <tr>
@@ -102,7 +95,7 @@
                             </tr>
                         </tbody>
                     </table>
-                </div>
+                </div> -->
             </div>
         </div>
         <!-- <div class="nk-block">
