--- a/templates/users.html
+++ b/templates/users.html
@@ -3,35 +3,40 @@
 <div class="row">
     <div class="col-12">
         <h1 class="display-4 mb-3">Users</h1>
-        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addusers">
+        <button type="button" class="btn btn-primary mb-3" data-bs-toggle="modal" data-bs-target="#addusers">
             Add Users
         </button>
-        <table class="table">
-            <thead>
-                <tr>
-                    <th>No</th>
-                    <th>Nama Lengkap</th>
-                    <th>Username</th>
-                    <th>Link</th>
-                    <th>action</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for d in data %}
-                <tr>
-                    <td>{{ loop.index }}</td>
-                    <td>{{ d.nama_lengkap }}</td>
-                    <td>{{ d.username }}</td>
-                    <td><a href="https:/trvltoken.io/{{ d.username }}">trvltoken.io/{{ d.username }}</a></td>
-                    <td>
-                        <a href="#" class="btn btn-info btn-sm">Lihat</a>
-                        <a href="#" class="btn btn-primary btn-sm">Edit</a>
-                        <button onclick="deleteUser('{{ d.id }}')" class="btn btn-danger btn-sm">Hapus</button>
-                    </td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
+        <div class="table-responsive">
+            <table class="table ">
+                <thead>
+                    <tr>
+                        <th class="d-none d-md-block">No</th>
+                        <th>Nama Lengkap</th>
+                        <th>Username</th>
+                        <th>Link</th>
+                        <th>action</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for d in data %}
+                    {% if d.role != 'admin' %}
+                    <tr>
+                        <td class="d-none d-md-block">{{ loop.index }}</td>
+                        <td>{{ d.nama_lengkap }}</td>
+                        <td>{{ d.username }}</td>
+                        <td><a href="{{ d.link }}" target="_blank" class="badge bg-warning text-dark">trvltoken.io/{{ d.username }}</a></td>
+                        <td>
+                            <a href="#" class="btn btn-info btn-sm mb-2"><i class="fa-solid fa-eye"></i></a>
+                            <a href="#" class="btn btn-primary btn-sm mb-2"><i class="fa-solid fa-pen-to-square"></i></a>
+                            <button onclick="resetPassword('{{ d.id }}')" class="btn btn-warning btn-sm mb-2"><i class="fa-solid fa-arrows-rotate"></i></button>
+                            <button onclick="deleteUser('{{ d.id }}')" class="btn btn-danger btn-sm mb-2"><i class="fa-solid fa-trash"></i></button>
+                        </td>
+                    </tr>
+                    {% endif %}
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
     </div>
 </div>
 
@@ -90,6 +95,21 @@
                 $.ajax({
                     type: "POST",
                     url: "{{ url_for('usersapp.delete_user') }}",
+                    data: {"uid": uid},
+                    success : function() {
+                        location.reload()
+                        
+                    }
+                })
+            }
+        }
+
+        function resetPassword(uid) {
+            var hapus = confirm('Apakah anda yakin Reset Password User ?')
+            if (hapus) {
+                $.ajax({
+                    type: "POST",
+                    url: "{{ url_for('usersapp.reset_password') }}",
                     data: {"uid": uid},
                     success : function() {
                         location.reload()
