--- a/templates/layout/navbar.html
+++ b/templates/layout/navbar.html
@@ -22,6 +22,9 @@
                     <a class="nav-link text-light" href="{{ url_for('usersapp.all_link') }}">Link</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link text-light" href="{{ url_for('usersapp.edit_profil') }}">Edit Profil</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link btn btn-danger text-light" href="/logout">Logout</a>
                 </li>
                 {% else %}
