--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,6 +1,16 @@
 {% extends '/layout/main.html' %}
 {% block _content %}
 
+{% if 'is_edit' not in session['user'] %}
+    <div class="row justify-content-center mt-4">
+        <div class="col-md-8 col-12">
+            <div class="alert alert-danger" role="alert">
+                Mohon Update Profil. Silahkan Update Profil Anda <a href="{{ url_for('usersapp.edit_profil') }}"><b>Disini</b></a>
+            </div>
+        </div>
+    </div>
+{% endif %}
+
 <div class="row justify-content-center">
     <div class="col-12">
         <h1>Dashboard</h1>
