--- a/templates/index.html
+++ b/templates/index.html
@@ -21,6 +21,15 @@
     <link rel="stylesheet" href="/assets/css/style-jasmine.css?ver=195">
     <!-- Extra CSS -->
     <link rel="stylesheet" href="/assets/css/theme.css?ver=195">
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GWZ7SC2TQL"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-GWZ7SC2TQL');
+</script>
     <style>
         .menu-item a {
             font-family: "Poppins", sans-serif;
